@@ -19,6 +19,11 @@ EXTRA_DIST = \
 
 ## "dist-hook" run after the distribution directory is filled, but before the actual tar (or shar) file is created.
 dist-hook:
+# Update revision in common.h
+	@zabbix_revision=`svn info|grep "Last Changed Rev"|awk '{print $$4;}'`; \
+	cat $(top_distdir)/include/common.h|sed "s/{ZABBIX_REVISION}/$$zabbix_revision/g" >$(top_distdir)/include/common.h.new
+	mv $(top_distdir)/include/common.h.new $(top_distdir)/include/common.h
+
 	rm -rf `find $(top_distdir) -name ".svn"`
 	rm -f $(top_distdir)/frontends/php/conf/zabbix.conf.php
 	rm -f $(top_distdir)/do
