@@ -34,7 +34,8 @@
  ******************************************************************************/
 static void app_title()
 {
-	printf("%s v%s (%s)\n", title_message, ZABBIX_VERSION, ZABBIX_REVDATE);
+	printf("%s v%s (revision %s) (%s)\n", title_message,
+			ZABBIX_VERSION, ZABBIX_REVISION, ZABBIX_REVDATE);
 }
 
 /******************************************************************************
