@@ -855,7 +855,9 @@ void test()
 		zabbix_open_log(LOG_TYPE_FILE,LOG_LEVEL_DEBUG,CONFIG_LOG_FILE);
 	}
 
-	zabbix_log( LOG_LEVEL_INFORMATION, "Starting zabbix_server. ZABBIX %s.", ZABBIX_VERSION);
+	zabbix_log( LOG_LEVEL_INFORMATION, "Starting zabbix_server. ZABBIX %s (revision %s).",
+			ZABBIX_VERSION,
+			ZABBIX_REVISION);
 
 	printf("-= Test Started =-\n\n");
 
@@ -1021,7 +1023,9 @@ int MAIN_ZABBIX_ENTRY(void)
 #endif
 
 /*	zabbix_log( LOG_LEVEL_WARNING, "INFO [%s]", ZBX_SQL_MOD(a,%d)); */
-	zabbix_log( LOG_LEVEL_WARNING, "Starting zabbix_server. ZABBIX %s.", ZABBIX_VERSION);
+	zabbix_log( LOG_LEVEL_WARNING, "Starting zabbix_server. ZABBIX %s (revision %s).",
+			ZABBIX_VERSION,
+			ZABBIX_REVISION);
 
 	zabbix_log( LOG_LEVEL_WARNING, "**** Enabled features ****");
 	zabbix_log( LOG_LEVEL_WARNING, "SNMP monitoring:       " SNMP_FEATURE_STATUS	);
@@ -1316,7 +1320,9 @@ void	zbx_on_exit()
 	php_sem_remove(&sqlite_access);
 #endif /* HAVE_SQLITE3 */
 
-	zabbix_log(LOG_LEVEL_INFORMATION, "ZABBIX Server stopped. ZABBIX %s.", ZABBIX_VERSION);
+	zabbix_log(LOG_LEVEL_INFORMATION, "ZABBIX Server stopped. ZABBIX %s (revision %s).",
+			ZABBIX_VERSION,
+			ZABBIX_REVISION);
 
 	exit(SUCCEED);
 }
